--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -90,7 +90,7 @@ http://ionicframework.com/docs/theming/ */
     --ion-background-color: #282828;
     --ion-text-color: white;
     --ion-color: white;
-    --ion-text-color-rgb: white;
+    --ion-text-color-rgb: 255, 255, 255;
     /** primary **/
     --ion-card-color: white;
     --ion-toolbar-background: #282828;
@@ -102,7 +102,7 @@ http://ionicframework.com/docs/theming/ */
     --ion-input-color: #414141; 
     --ion-input-color-disabled: #1c1c1c; 
     --ion-input-color-selected: #515151; 
-    --ion-overlay-background-color: #515151;
+    --ion-overlay-background-color: #282828;
     --ion-color-step-850: #fffff;
     --ion-color-primary-rgb: 78, 154, 212;
     --ion-color-primary-contrast: white;
